<resources>
    <string name="app_name">NursingSystem</string>
    <string name="prompt_email">工号</string>
    <string name="prompt_password">密码</string>
    <string name="sign_in">登录</string>
    <string name="login_text">连线护理</string>
    <string name="check_re_account">记住工号</string>
    <string name="doctoradvice">医嘱</string>
    <string name="blood_samping">采血</string>
    <string name="tour">巡床</string>
    <string name="information">信息</string>
    <string name="transfusion">输液</string>
    <string name="nursing">护理</string>
    <string name="grade_one_nursing">一级护理</string>
    <string name="grade_two_nursing">二级护理</string>
    <string name="grade_three_nursing">三级护理</string>
    <string name="intensive_care">基础护理</string>
    <string name="dispense_medicines">配药</string>
    <string name="execute_doctor_advice">医嘱执行</string>
    <string name="check_sickbed">床位列表</string>
    <string name="access_control">出入管理</string>
    <string name="collect_sign">采集体征</string>
    <string name="account_hint">请输入工号</string>
    <string name="password_hint">请输入密码</string>
    <string name="check">核查医嘱</string>
    <string name="patient_message">病人信息</string>
    <string name="advice_record">医嘱记录</string>
    <string name="cost">费用</string>
</resources>
