<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    android:theme="@style/Theme.AppCompat.NoActionBar"
    tools:context=".Activity.MainActivity">

    <TextView
        android:id="@+id/day"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="10dp"
        android:gravity="center"
        android:textColor="@color/gray"
        android:textSize="70sp"
        app:layout_constraintEnd_toStartOf="@+id/month_year"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/day_of_week"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:gravity="center"
        android:textColor="@color/hint_text_color"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="@+id/month_year"
        app:layout_constraintTop_toTopOf="@+id/day" />

    <TextView
        android:id="@+id/month_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="113dp"
        android:gravity="center"
        android:textColor="@color/day_color"
        android:textSize="20dp"
        app:layout_constraintEnd_toStartOf="@+id/refresh"
        app:layout_constraintStart_toEndOf="@+id/day"
        app:layout_constraintTop_toBottomOf="@+id/day_of_week" />

    <ImageView
        android:id="@+id/set"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="19dp"
        android:src="@mipmap/setting"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/refresh"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/refresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="19dp"
        android:src="@mipmap/refresh"
        app:layout_constraintEnd_toStartOf="@+id/set"
        app:layout_constraintStart_toEndOf="@+id/month_year"
        app:layout_constraintTop_toTopOf="@+id/set" />


    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:textColor="@color/gray"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/job_num"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/job_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/gray"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/name"
        app:layout_constraintTop_toBottomOf="@+id/month_year" />

    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="260dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/check_advice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@mipmap/examine"
            android:drawablePadding="10dp"
            android:gravity="center"
            android:text="@string/check"
            android:textColor="@color/hint_text_color"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/examine_advice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@mipmap/execute"
            android:drawablePadding="10dp"
            android:gravity="center"
            android:text="@string/execute_doctor_advice"
            android:textColor="@color/hint_text_color"
            android:textSize="18sp" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/radioGroup4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup2">

        <RadioButton
            android:id="@+id/care"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@mipmap/care"
            android:drawablePadding="10dp"
            android:gravity="center"
            android:text="@string/nursing"
            android:textColor="@color/hint_text_color"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/dispense_medicines"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@mipmap/medicine"
            android:drawablePadding="10dp"
            android:gravity="center"
            android:text="@string/dispense_medicines"
            android:textColor="@color/hint_text_color"
            android:textSize="18sp" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/radioGroup5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup4">

        <RadioButton
            android:id="@+id/tour"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@mipmap/tour"
            android:drawablePadding="10dp"
            android:gravity="center"
            android:text="@string/tour"
            android:textColor="@color/hint_text_color"
            android:textSize="18sp"
            />

        <RadioButton
            android:id="@+id/access"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@mipmap/access_control"
            android:drawablePadding="10dp"
            android:gravity="center"
            android:text="@string/access_control"
            android:textColor="@color/hint_text_color"
            android:textSize="18sp"
            />

    </RadioGroup>

    <fragment
        android:id="@+id/main_navbar"
        android:name="com.example.nursingsystem.Fragment.NavbarFlagment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>