<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:theme="@style/Theme.Design.NoActionBar">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/toolbar_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/result_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/lucency"
            android:drawableTop="@mipmap/back"
            android:gravity="center"
            android:paddingTop="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/patient_message"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />
    </RelativeLayout>


    <TextView
        android:id="@+id/patient_message_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:text="姓名：猎M人"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/patient_message_sex"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/patient_message_sex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="99dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="80dp"
        android:text="性别：男"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/patient_message_department"
        app:layout_constraintEnd_toEndOf="@+id/relativeLayout"
        app:layout_constraintStart_toEndOf="@+id/patient_message_age"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />

    <TextView
        android:id="@+id/patient_message_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="250dp"
        android:text="年龄：18"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/patient_message_department"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="60dp"
        android:text="科室：呼吸科"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/patient_message_age"
        app:layout_constraintEnd_toEndOf="parent" />


    <TextView
        android:id="@+id/patient_message_bed_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="70dp"
        android:text="病床号：150"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/patient_message_age" />

    <Button
        android:id="@+id/patient_message_examine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="78dp"
        android:layout_marginEnd="77dp"
        android:background="@drawable/btn"
        android:text="@string/execute_doctor_advice"
        android:textColor="@color/white"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/patient_message_check"
        app:layout_constraintEnd_toStartOf="@+id/patient_message_check"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/patient_message_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="81dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="220dp"
        android:background="@drawable/btn_orange"
        android:text="@string/check"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/patient_message_bed_num" />

    <Button
        android:id="@+id/m_care"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="1dp"
        android:background="@drawable/btn_yellow"
        android:text="护理"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/m_tour"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/patient_message_examine" />

    <Button
        android:id="@+id/m_tour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/btn_purple"
        android:text="巡床"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/m_care"
        app:layout_constraintTop_toBottomOf="@+id/patient_message_check" />


</androidx.constraintlayout.widget.ConstraintLayout>